# Skillfactory

./: .gitignore  5.2.12.docx  Branch new.docx  CONTRIBUTING.md  LICENSE  Postman_Vault_Key_2025-06-02.txt  README.md  ReadMe.md  conftest.py  find_forgot.py  inspect_elements.py  requirements.txt  response_1748419561193.json  Мотивационное письмо.txt  Пример_Тест-плана_Модуль_5.docx  Согласие на обработку перс.данных.docx  отчет по багам с интенсива.txt
.github/: pull_request_template.md
QAP-236/: О чём это всё 1.8.4.docx  Шаблон партфолио.md
homework-23/: README.md  data_saver.py  main.py  openlibrary_books.csv  openlibrary_books.json  openlibrary_parser.py  pyproject.toml
tests/: test_additional.py  test_auth.py  test_extended.py  test_validation.py
ДЗ 10/: DZ.postman_collection.json  Задание.txt
ДЗ 11/: Data.csv  План изучения Postman для API.txt  Скотские запрсы.postman_collection.json
ДЗ 12/: Data.csv  Задание 12.txt  Скан Copy.postman_collection.json
ДЗ 13/: Mobil_test.docx  Mobil_test.md  bagreport.csv  chek-list.csv
ДЗ 15/: bugs.json  data.json  data_full.json  ДЗ 15.xlsx  Задание 15.md  тест-кейс, чек-лист и багов У ПИТОМЦА - Тест-кейсы.csv
ДЗ 18/: 18.7.py
ДЗ 20/: analyze_orders.py
ДЗ 5.11/: Отзыв ментора Елена.docx  Тест кейс 3.xlsx  Тест-план.docx  Чек лист.xlsx
ДЗ 6.12.1/: Mind Map.json  Ответы.docx
ДЗ 7/: advanced_test_case_template.xlsx
ДЗ 9/: site.html  tabl 9.xlsx  Домашка 9.docx
Стажировка Дм Тех/: Отчёт.md  Отчёт.xlsx
