[project]
name = "homework-23"
version = "0.1.0"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- ЭТА СЕКЦИЯ ИСПРАВИТ ОШИБКУ ---
# Мы явно указываем, какие файлы являются частью нашего проекта
[tool.hatch.build.targets.wheel]
include = [
    "openlibrary_parser.py",
    "data_saver.py",
    "main.py",
]
